tests/vendor/valid/trivial/redundant_paren.c
//expect 246
//tags: trivial, unary
int main() { return -((((10)))); }