tests/vendor/invalid/syntax/missing_const_2.c
//tags: trivial
int main()
{
    10 <= !;
}